back-budjetPack/deployment/k8s/budjetpack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budjetpack-ingress
  namespace: budjetpack
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: budjetpack-backend-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: budjetpack-frontend-service
                port:
                  number: 4200
