back-budjetPack/deployment/k8s/http.yaml
# HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: budjetpack-backend-httproute
  namespace: budjetpack
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - api.127.0.0.1.nip.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: budjetpack-backend-service
      namespace: budjetpack
      port: 3000
